--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Tejas Shekar" />
     <meta name="description" content="New Tab Browser Extension" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
