fix: stylesheet link

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://prime8-ui-v2.netlify.app/styles.css" />
+    <link rel="stylesheet" href="https://prime8-ui.netlify.app/styles.css" />
     <title>New Tab</title>
   </head>
   <body>
